2001-11-03  Eli Zaretskii  <eliz@is.elta.co.il>

	* calendar/timeclock.el (timeclock-out): Signal an error if
	timeclock-last-event is nil.

2001-11-01  Richard M. Stallman  <rms@gnu.org>

	* files.el (find-backup-file-name): Use make-backup-file-name.

2001-11-01  Gerd Moellmann  <gerd@gnu.org>

	* startup.el (command-line): If the terminal Emacs is running on
	has erase char set to ^H, use the Backspace key for deleting
	backward, and the Delete key for deleting forward.

2001-10-31  Jason Rumney  <jasonr@gnu.org>

	* international/mule-cmds.el (locale-language-names): Add chs and
	cht as aliases for Chinese-GB and Chinese-BIG5.

2001-10-30  Gerd Moellmann  <gerd@gnu.org>

	* international/iso-acc.el (iso-accents-compose): Remove a
	superfluous setq.

2001-10-29  Eli Zaretskii  <eliz@is.elta.co.il>

	* faces.el (invert-face): Check for 'unspecified, not for nil,
	when testing whether face colors are not specified.  From
	David.Kastrup@t-online.de (David Kastrup).

2001-10-29  Gerd Moellmann  <gerd@gnu.org>

	* international/iso-acc.el (iso-accents-compose): Push SECOND-CHAR
	as is on unread-command-events instead of `(SECOND-CHAR)'.

	* enriched.el (enriched-face-ans): Handle face attributes
	of the form `(FACE1 FACE2 ...)'.

	* dired-x.el (dired-omit-startup): Show ``Omit'' only in Dired
	buffers.

2001-10-29  Alex Schroeder  <kensanata@yahoo.com>

	* progmodes/sql.el (sql-mysql): Doc change by RMS.

	* progmodes/sql.el (sql-db2): Doc change.
	(sql-help): Doc change by Christian Egli <christian.egli@stest.ch>.
	(sql-mysql): Doc change by Christian Egli <christian.egli@stest.ch>.

2001-10-29  Richard M. Stallman  <rms@gnu.org>

	* mail/supercite.el (sc-emacs-features): Test for "Emacs 19"
	by really checking that it is not version 18.

	* emacs-lisp/lisp-mode.el (eval-defun): Doc fix.

2001-10-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* cus-start.el (recursive-load-depth-limit): Added.

2001-10-28  Masayuki Ataka  <ataka@milk.freemail.ne.jp>
