@@ -1,5 +1,9 @@
 2001-11-03  Eli Zaretskii  <eliz@is.elta.co.il>
 
+	* frame.el (set-background-color, set-foreground-color): Call
+	face-set-after-frame-default, to propagate the new colors to the
+	frame's parameters alist.
+
 	* calendar/timeclock.el (timeclock-out): Signal an error if
 	timeclock-last-event is nil.
 
